LPD-101823 Use JDK 21 for releases 2026.q4.0 and later